Add BrandsTrack and FeatureList components, update index page, and refine global styles
- Introduced `BrandsTrack` component to showcase brand logos with a scrolling animation.
- Added `FeatureList` component to highlight key features with icons and descriptions.
- Updated `index.astro` to include the new components for enhanced content presentation.
- Refined global styles for better layout and responsiveness, including adjustments to headings and container styles.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,6 +5,8 @@
     --default-font-family: 'Poppins', 'sans-serif';
     --font-sans: 'Poppins', 'sans-serif';
 
+    --max-width-screen-lg: 1240px;
+
     --color-bg: rgb(0, 0, 14);
     --color-text: #fff;
     --color-primary: #f8994f;
@@ -30,11 +32,15 @@
     }
 
     h4 {
-        @apply text-xl md:text-2xl lg:text-3xl font-semibold;
+        @apply text-xl lg:text-xl font-semibold;
     }
 
     p {
         @apply text-base font-light leading-6 lg:leading-8;
+    }
+
+    .container {
+        @apply px-5 mx-auto overflow-hidden;
     }
 }
 
