--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
 import HeroSection from '../components/HeroSection.astro';
+import BrandsTrack from '../components/BrandsTrack.astro';
+import FeatureList from '../components/FeatureList.astro';
 import Layout from '../layouts/Layout.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
@@ -8,4 +10,6 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout>
     <HeroSection />
+    <BrandsTrack />
+    <FeatureList />
 </Layout>
