Add ProblemSection and PointsList components, update index page for enhanced creator engagement

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import HeroSection from '../components/HeroSection.astro';
 import BrandsTrack from '../components/BrandsTrack.astro';
 import FeatureList from '../components/FeatureList.astro';
+import ProblemSection from '../components/ProblemSection.astro';
 import Layout from '../layouts/Layout.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
@@ -12,4 +13,5 @@ import Layout from '../layouts/Layout.astro';
     <HeroSection />
     <BrandsTrack />
     <FeatureList />
+    <ProblemSection />
 </Layout>
