--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,16 +2,15 @@
 import HeroSection from '../components/HeroSection.astro';
 import BrandsTrack from '../components/BrandsTrack.astro';
 import FeatureList from '../components/FeatureList.astro';
+import PointsSection from '../components/PointsSection.astro';
 import ProblemSection from '../components/ProblemSection.astro';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
     <HeroSection />
     <BrandsTrack />
     <FeatureList />
+    <PointsSection />
     <ProblemSection />
 </Layout>
