Add BuildYourBrandSection component and integrate into index page to enhance brand-building messaging

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import BrandsTrack from '../components/BrandsTrack.astro';
 import FeatureList from '../components/FeatureList.astro';
 import PointsSection from '../components/PointsSection.astro';
 import ProblemSection from '../components/ProblemSection.astro';
+import BuildYourBrandSection from '../components/BuildYourBrandSection.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
@@ -13,4 +14,5 @@ import Layout from '../layouts/Layout.astro';
     <FeatureList />
     <PointsSection />
     <ProblemSection />
+    <BuildYourBrandSection />
 </Layout>
